# VoCD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: wheels.yml
python/: example.py  example_best_custom_impl.py  example_best_custom_impl_fast_tetrahedrize.py  tetrahedralize.py
src/: bindings.cpp  vocd_ext.cpp
src/vocd/: __init__.py
vocd/: __init__.py
